--- a/backend/aerodynamics/physics_plugin/cmake/aerodynamics_physics_plugin_config.h.in
+++ b/backend/aerodynamics/physics_plugin/cmake/aerodynamics_physics_plugin_config.h.in
@@ -6,4 +6,7 @@
 #define AERODYNAMICS_PHYSICS_PLUGIN_VERSION_MINOR @PROJECT_VERSION_MINOR@
 #define AERODYNAMICS_PHYSICS_PLUGIN_VERSION_PATCH @PROJECT_VERSION_PATCH@
 
+/* OpenMP support */
+#cmakedefine01 HAVE_OPENMP
+
 #endif /* AERODYNAMICS_PHYSICS_PLUGIN_CONFIG_H */
